--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -73,10 +73,13 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             flex-direction: column;
             button {
                 width: 100%;
-                height: 100%;
+                height: 50%;
                 border-left: $border;
                 font-size: 25px;
                 &:hover { font-size: 20px; }
+            }
+            .LengthInput {
+                height: 50%;
             }
         }
         &:nth-child(5) {
