--- a/src/Components/RadialSettings/RadialSettings.scss
+++ b/src/Components/RadialSettings/RadialSettings.scss
@@ -119,6 +119,19 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                     display: flex;
                     justify-content: space-evenly;
                     align-items: center;        
+                    div {
+                        display: flex;
+                        align-items: center;
+                        .btn--active, .btn--inactive {
+                            margin-left: 3px;
+                            width: 6px;
+                            height: 6px;
+                            border-radius: 5px;
+                            border: 1px solid rgba(221, 221, 221, 0.2);
+                        }
+                        .btn--active { background: $activeBtnBg; }
+                        .btn--inactive { background: rgba(0, 0, 0, 0.7); }
+                    }
                 }
             }
             .RadialSettings__position-btns {
