--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -126,4 +126,17 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
         font-size: 14px !important; 
         &:hover { font-size: 12px; }
     }
+    .GradientButtons {
+        & > div {
+            &:first-child, &:nth-child(2), &:nth-child(3) {
+                display: none;
+            }
+            &:nth-child(4) {
+                width: 30%;
+            }
+            &:nth-child(5) {
+                width: 20%;
+            }
+        }        
+    }
 }
