--- a/src/Components/LengthInput/LengthInput.scss
+++ b/src/Components/LengthInput/LengthInput.scss
@@ -1,6 +1,4 @@
-$primarytColor: #c2c2c2;
-$activeBtnBg: #4cc3f1;
-$border: 1px solid rgba(221, 221, 221, 0.1);
+@import "../../variables/variables.scss";
 
 .LengthInput {
     display: flex;
@@ -10,7 +8,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
     border-bottom: $border;
     border-top: $border;
     input {
-        max-width: 40px;
+        width: calc(100% - 40px);
         background: #131313;
         font-size: 12px;
         border: none;
@@ -30,8 +28,12 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
         line-height: 20px;
         color: #888;
         &:nth-child(2) {
+            width: 20px;
             font-size: 14px;
             background: #131313;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         &:nth-child(3) {
             width: 20px;
