--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -1,5 +1,4 @@
-$primarytColor: #c2c2c2;
-$activeBtnBg: #4cc3f1;
+@import "../../variables/variables.scss";
 
 .GradientField {
     background: rgba(0, 0, 0, 0.3);
