--- a/src/Components/ResultDisplayMenu/ResultDisplayMenu.scss
+++ b/src/Components/ResultDisplayMenu/ResultDisplayMenu.scss
@@ -1,6 +1,4 @@
-$primarytColor: #c2c2c2;
-$borderColor: #111;
-$border: 1px solid $borderColor;
+@import "../../variables/variables.scss";
 
 .ResultDisplayMenu {
     position: absolute;
