--- a/src/Components/ColorStop/ColorStop.scss
+++ b/src/Components/ColorStop/ColorStop.scss
@@ -18,24 +18,26 @@
         background: #161616;
         font-size: 10px;
         border: none;
-        border-bottom: 1px solid rgba(221, 221, 221, 0.2);
+        border-bottom: $secondaryBorder;
         & > input {
             max-width: 40px;
             height: 100%;
             border: none;
             background: transparent;
             box-shadow: none;
-            color: #ddd;
+            color: $primaryTextColor;
             text-align: center;
             font-size: inherit;
         }
         input:invalid {
             border: none;
-            color: deeppink;
-            border-bottom: 1px dotted deeppink;
+            color: $warningTextColor;
+            border-bottom: $warningBorder;
         }
     }        
-     .ColorStop__line {  
+     .ColorStop__line { 
+        stroke: $secondaryBorderColor;
+        stroke-width: 1px;
         pointer-events: none;
     }
     .ColorStop__thumb {
@@ -46,11 +48,19 @@
         pointer-events: none;
         svg {
             height: 35%;
+            line {
+                stroke: $tertiaryTextColor;
+                stroke-width: 1px;
+            }
         }
         div {
             height: 65%;
             width: 14px;
+            border: 1px solid $tertiaryTextColor;
             pointer-events: auto;
+        }
+        .ColorStop--delete-on {
+            border: $warningBorder;
         }
     }
 }
