--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -8,13 +8,13 @@
         position: relative;
         border: none;
         background: transparent;
-        color: $primarytColor;
+        color: $primaryTextColor;
         font-size: 20px;
         line-height: 20px;
         cursor: pointer;
         &:hover {
-            background: rgba(255, 255, 255, 0.1);
-            color: $activeBtnBg;
+            background: $buttonHoverBackgroundColor;
+            color: $activeButtonTextColor;
             font-size: 16px;
         }
         & > div {
@@ -24,10 +24,10 @@
             top: 3px;
             right: 3px;
             border-radius: 5px;
-            border: 1px solid rgba(221, 221, 221, 0.2);
+            border: $tertiaryBorder;
         }
-        .btn--active { background: $activeBtnBg; }
-        .btn--inactive { background: rgba(0, 0, 0, 0.7); }
+        .btn--active { background: $activeButtonTextColor; }
+        .btn--inactive { background: $tertiaryBackgroundColor; }
     }
     & > div {
         height: 100%;
@@ -38,31 +38,31 @@
             button {
                 width: 100%;
                 height: 50%;
-                &:first-child { border-bottom: $border; }
+                &:first-child { border-bottom: $tertiaryBorder; }
             }
         }
         &:nth-child(2) {
             button {
                 width: 50%;
                 height: 100%;
-                border-left: $border;
+                border-left: $tertiaryBorder;
                 font-size: 20px;
                 &:hover { font-size: 16px; }
             }
         }
         &:nth-child(3) {
-            border-left: $border;
+            border-left: $tertiaryBorder;
             flex-wrap: wrap;
             width: 20%;
             button {
                 width: 50%;
                 height: 50%;
-                &:nth-child(1) { border-bottom: $border; }
+                &:nth-child(1) { border-bottom: $tertiaryBorder; }
                 &:nth-child(2) { 
-                    border-left: $border;
-                    border-bottom: $border;
+                    border-left: $tertiaryBorder;
+                    border-bottom: $tertiaryBorder;
                 }
-                &:nth-child(4) { border-left: $border; }
+                &:nth-child(4) { border-left: $tertiaryBorder; }
             }
         }
         &:nth-child(4) {
@@ -71,12 +71,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            border-left: $border;
+            border-left: $tertiaryBorder;
             button {
                 width: 100%;
                 height: 50%;
                 font-size: 25px;
-                border-bottom: $border;
+                border-bottom: $tertiaryBorder;
                 &:hover { font-size: 20px; }
             }
             .LengthInput {
@@ -88,8 +88,8 @@
             button {
                 width: 100%;
                 height: 100%;
-                border-left: $border;
-                border-right: $border;
+                border-left: $tertiaryBorder;
+                border-right: $tertiaryBorder;
                 font-size: 25px;
                 font-weight: lighter;
                 &:hover { font-size: 20px; }
@@ -105,16 +105,17 @@
                 margin: 0 15px;
                 height: 50%;
                 max-width: 40px;
-                background: #131313;
+                background: $tertiaryBackgroundColor;
                 font-size: 14px;
-                border: 1px solid rgba(221, 221, 221, 0.1);
-                border-bottom: $border;
-                border-top: $border;
-                color: #ddd;
+                border-radius: $borderRadius;
+                border: $tertiaryBorder;
+                border-bottom: $tertiaryBorder;
+                border-top: $tertiaryBorder;
+                color: $primaryTextColor;
                 text-align: center;
             }
             input:invalid {
-                color: deeppink;
+                color: $warningTextColor;
                 box-shadow: none;
             }
         }
