--- a/src/Components/GradientSliderButtonBox/GradientSliderButtonBox.scss
+++ b/src/Components/GradientSliderButtonBox/GradientSliderButtonBox.scss
@@ -6,17 +6,17 @@
         justify-content: center;
         width: 70px;
         height: 100%;
-        border-left: 1px solid rgba(221, 221, 221, 0.1);
+        border-left: $tertiaryBorder;
         & > div {
             width: 100%;
             height: 50%;
             display: flex;
             &:first-child {
-                border-bottom: 1px solid rgba(221, 221, 221, 0.1);
+                border-bottom: $tertiaryBorder;
                 button {
                     width: 50%;
                     font-size: 22px;
-                    &:first-child { border-right: 1px solid rgba(221, 221, 221, 0.1); }
+                    &:first-child { border-right: $tertiaryBorder; }
                     &:hover { font-size: 18px; }
                 }
             }
@@ -31,12 +31,12 @@
             height: 100%;
             border: none;
             background: transparent;
-            color: #ddd;
+            color: $primaryTextColor;
             font-size: 16px;
             cursor: pointer;
             &:hover {
-                background: rgba(255, 255, 255, 0.1);
-                color: $activeBtnBg;
+                background: $secondaryBorderColor;
+                color: $activeButtonTextColor;
                 font-size: 14px;
             }
             & > div {
@@ -46,9 +46,9 @@
                 top: 3px;
                 right: 3px;
                 border-radius: 5px;
-                border: 1px solid rgba(221, 221, 221, 0.2);
+                border: $tertiaryBorder;
             }
-            .btn--active { background: $activeBtnBg; }
-            .btn--inactive { background: rgba(0, 0, 0, 0.7); }
+            .btn--active { background: $activeButtonTextColor; }
+            .btn--inactive { background: $tertiaryBackgroundColor; }
         }
 }
