--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -23,11 +23,19 @@ $warningTextColor:              #ff1493;
 
 // ---------- SIZES -----------
 // FONT SIZES
+$xxlFont:                         26px;
+$xlgFont:                         22px;
+$lrgFont:                         18px;
+$medFont:                         16px;
+$smlFont:                         14px;
+$xsmFont:                         12px;
+$xxsFont:                         10px;
 // BORDER SIZES
 $borderThin:                      1px;
 $borderMedium:                    2px;
 $borderThick:                     3px;
 $borderRadius:                    2px;
+$circleRadius:                    100%;
 
 
 
