--- a/src/Components/ColorHint/ColorHint.scss
+++ b/src/Components/ColorHint/ColorHint.scss
@@ -15,9 +15,9 @@
         width: 100%;
         height: 50%;
         background: $secondaryBackgroundColor;
-        font-size: 10px;
+        font-size: $xxsFont;
         border: none;
-        border-bottom: $secondaryBorder;
+        border-bottom: $tertiaryBorder;
         & > input {
             max-width: 40px;
             height: 100%;
@@ -54,7 +54,7 @@
             position: relative;
             height: 65%;
             width: 14px;
-            border-radius: 100%;
+            border-radius: $circleRadius;
             pointer-events: auto;
             display: flex;
        }
