--- a/src/Components/ColorStop/ColorStop.scss
+++ b/src/Components/ColorStop/ColorStop.scss
@@ -16,9 +16,9 @@
         align-items: center;
         width: 100%;
         background: #161616;
-        font-size: 10px;
+        font-size: $xxsFont;
         border: none;
-        border-bottom: $secondaryBorder;
+        border-bottom: $tertiaryBorder;
         & > input {
             max-width: 40px;
             height: 100%;
