--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -9,13 +9,13 @@
         border: none;
         background: transparent;
         color: $primaryTextColor;
-        font-size: 20px;
-        line-height: 20px;
+        font-size: $lrgFont;
+        line-height: $lrgFont;
         cursor: pointer;
         &:hover {
             background: $buttonHoverBackgroundColor;
             color: $activeButtonTextColor;
-            font-size: 16px;
+            font-size: $medFont;
         }
         & > div {
             position: absolute;
@@ -46,8 +46,8 @@
                 width: 50%;
                 height: 100%;
                 border-left: $tertiaryBorder;
-                font-size: 20px;
-                &:hover { font-size: 16px; }
+                font-size: $lrgFont;
+                &:hover { font-size: $medFont; }
             }
         }
         &:nth-child(3) {
@@ -67,6 +67,7 @@
         }
         &:nth-child(4) {
             width: 10%;
+            min-width: 70px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -75,12 +76,14 @@
             button {
                 width: 100%;
                 height: 50%;
-                font-size: 25px;
+                font-size: $xxlFont;
                 border-bottom: $tertiaryBorder;
-                &:hover { font-size: 20px; }
+                &:hover { font-size: $lrgFont; }
             }
             .LengthInput {
                 height: 50%;
+                border-radius: 0;
+                border: none;
             }
         }
         &:nth-child(5) {
@@ -90,13 +93,13 @@
                 height: 100%;
                 border-left: $tertiaryBorder;
                 border-right: $tertiaryBorder;
-                font-size: 25px;
+                font-size: $xxlFont;
                 font-weight: lighter;
-                &:hover { font-size: 20px; }
+                &:hover { font-size: $lrgFont; }
             }
         }
         &:nth-child(6) {
-            width: 20%;
+            width: 120px;
             margin-left: auto;
             display: flex;
             justify-content: center;
@@ -105,8 +108,9 @@
                 margin: 0 15px;
                 height: 50%;
                 max-width: 40px;
+                max-height: 26px;
                 background: $tertiaryBackgroundColor;
-                font-size: 14px;
+                font-size: $medFont;
                 border-radius: $borderRadius;
                 border: $tertiaryBorder;
                 border-bottom: $tertiaryBorder;
@@ -118,6 +122,7 @@
                 color: $warningTextColor;
                 box-shadow: none;
             }
+            input::placeholder { color: $primaryTextColor; }
         }
     }
 }
@@ -125,8 +130,7 @@
 
 @media only screen and (max-width: 500px) {
     .App .GradientButtons button { 
-        font-size: 14px !important; 
-        &:hover { font-size: 12px; }
+        &:hover { font-size: $xsmFont; }
     }
     .GradientButtons {
         & > div {
