--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -1,41 +1,42 @@
 @import "../../variables/variables.scss";
 
 .GradientField {
-    background: rgba(0, 0, 0, 0.3);
-    border-top: 1px solid rgba(221, 221, 221, 0.5);
-    border-bottom: 1px solid rgba(221, 221, 221, 0.5);
+    background: $secondaryBackgroundColor;
+    border-bottom: $secondaryBorder;
     height: 150px;
     header {
-        height: 22px;
+        height: $xlgFont;
         width: 100%;
         padding: 0 5px 0 0;
-        background: rgba(0, 0, 0, 0.1);
-        font-size: 16px;
+        background: $secondaryBackgroundColor;
+        font-size: $medFont;
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        border-bottom: 1px solid rgba(221, 221, 221, 0.1);
+        border-bottom: $tertiaryBorder;
         cursor: default;
         .GradientField__index {
-            width: 18px;
-            height: 18px;
+            width: $lrgFont;
+            height: $lrgFont;
             margin: 0 15px 0 5px;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #ddd;
-            color: #222;
-            font-size: 14px;
+            background-color: $secondaryTextColor;
+            color: $secondaryBackgroundColor;
+            font-size: $smlFont;
+            font-weight: bolder;
             text-align: center;
-            border-radius: 50%;
+            line-height: $lrgFont;
+            border-radius: $circleRadius;
         }
         .GradientField__name {
             cursor: text;
             input {
-                background: #ddd;
+                background: $secondaryTextColor;
                 border-style: none;
-                color: #222;
-                font-size: 14px;
+                color: $secondaryBackgroundColor;
+                font-size: $smlFont;
             }
         }
         & > div:last-child {
@@ -54,8 +55,8 @@
                 background: transparent;
                 border: none;
                 color: $primaryTextColor;
-                font-size: 22px;
-                line-height: 22px;
+                font-size: $xlgFont;
+                line-height: $xlgFont;
                 vertical-align: middle;
                 cursor: pointer;
                 & > div {
@@ -65,9 +66,9 @@
                 }
                 &:hover {
                     color: $activeButtonTextColor;
-                    font-size: 18px;
+                    font-size: $lrgFont;
                 }
-                &:last-child:hover { color: deeppink; }
+                &:last-child:hover { color: $warningTextColor; }
             }
         }
     }
@@ -84,7 +85,7 @@
             div {
                 width: 50px;
                 height: 50px;
-                border: 1px solid #ddd;
+                border: $secondaryBorder;
                 cursor: pointer;
             }
         }
@@ -92,7 +93,7 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            border-left: 1px solid rgba(221, 221, 221, 0.1);
+            border-left: $tertiaryBorder;
         }
     }
 }
