--- a/src/Components/GradientList/GradientList.scss
+++ b/src/Components/GradientList/GradientList.scss
@@ -12,11 +12,11 @@
         border: none;
         background: transparent;
         color: $primaryTextColor;
-        font-size: 24px;
+        font-size: $xxlFont;
         font-weight: bold;
         margin-right: 5px;
         &:hover {
-            font-size: 20px;
+            font-size: $xlgFont;
             color: $activeButtonTextColor;
         }
     }
