--- a/src/Components/LengthInput/LengthInput.scss
+++ b/src/Components/LengthInput/LengthInput.scss
@@ -3,12 +3,14 @@
 .LengthInput {
     display: flex;
     justify-content: space-around;
-    border-radius: 2px;
+    background: $tertiaryBackgroundColor;
+    border-radius: $borderRadius;
     border: $tertiaryBorder;
     input {
         width: calc(100% - 40px);
+        min-height: 20px;
         background: $tertiaryBackgroundColor;
-        font-size: 12px;
+        font-size: $xsmFont;
         border: none;
         color: $secondaryTextColor;
         text-align: center;
@@ -19,16 +21,16 @@
     }
     & > div {
         height: 100%;
+        min-height: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 15px;
-        line-height: 20px;
+        line-height: $lrgFont;
         color: $secondaryTextColor;
         &:nth-child(2) {
             width: 20px;
-            font-size: 14px;
-            background: $tertiaryBackgroundColor;
+            font-size: $xsmFont;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -37,6 +39,7 @@
             width: 20px;
             color: $secondaryTextColor;
             border-left: $tertiaryBorder;
+            background: $secondaryBackgroundColor;
             cursor: pointer;
             &:hover {
                 color: $activeButtonTextColor;
@@ -44,28 +47,35 @@
             }
         }
         &:last-child {
+            content: "";
             position: relative;
-            width: 0;
-            height: 0;
+            height: 100%;
+            min-height: 20px;
+            width: 0px;
         }
     }
     .LengthInput__options {
         position: absolute;
-        bottom: -48px;
-        right: -1px;
+        top: 100%;
+        right: 0;
+        min-height: 26px;
         display: flex;
+        justify-content: space-evenly;
         background: $secondaryBackgroundColor;
         border-radius: $borderRadius;
         border: $tertiaryBorder;
         z-index: 1002;
         button {
+            min-height: 26px;
+            min-width: 26px;
             background: $tertiaryBackgroundColor;
-            border: none !important;
+            border: none;
             padding: 0 5px;
-            font-size: 14px !important;
+            font-size: $xsmFont !important;
             color:$secondaryTextColor;
+            &:not(:first-child) { border-left: $tertiaryBorder; }
             &:hover {
-                font-size: 14px;
+                font-size: $medFont;
                 color: $activeButtonTextColor;
             }
         }
