--- a/src/Components/ResultDisplayMenu/ResultDisplayMenu.scss
+++ b/src/Components/ResultDisplayMenu/ResultDisplayMenu.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     h2 {
-        font-size: 16px;
+        font-size: $medFont;
         text-align: center;
     }
     div {
@@ -28,7 +28,7 @@
         }
     }
     button {
-        font-size: 16px;
+        font-size: $medFont;
         border: 1px solid $primaryTextColor;
         background: transparent;
         color: $primaryTextColor;
