--- a/src/Components/RadialSettings/RadialSettings.scss
+++ b/src/Components/RadialSettings/RadialSettings.scss
@@ -16,24 +16,13 @@
         color: $primaryTextColor;
         font-size: $medFont;
         border: $secondaryBorder;
-        border-radius: $border-radius;
+        border-radius: $borderRadius;
         cursor: pointer;
         &:hover {
             background: $buttonHoverBackgroundColor;
             font-size: $smlFont;
             color: $activeButtonTextColor;
         }
-        & > div {
-            position: absolute;
-            width: 6px;
-            height: 6px;
-            top: 3px;
-            right: 3px;
-            border-radius: 5px;
-            border: $tertiaryBorder;
-        }
-        .btn--active { background: $activeButtonTextColor; }
-        .btn--inactive { background: $tertiaryBackgroundColor; }
     }
     .LengthInput {
         width: 80px;
@@ -122,19 +111,6 @@
                     display: flex;
                     justify-content: space-evenly;
                     align-items: center;        
-                    div {
-                        display: flex;
-                        align-items: center;
-                        .btn--active, .btn--inactive {
-                            margin-left: 3px;
-                            width: 6px;
-                            height: 6px;
-                            border-radius: 5px;
-                            border: $tertiaryBorder;
-                        }
-                        .btn--active { background: $activeButtonTextColor; }
-                        .btn--inactive { background: $tertiaryBackgroundColor; }
-                    }
                 }
             }
             .RadialSettings__position-btns {
