start working on other units like px

--- a/src/Components/LengthInput/LengthInput.scss
+++ b/src/Components/LengthInput/LengthInput.scss
@@ -57,7 +57,7 @@
     .LengthInput__options {
         position: absolute;
         top: 100%;
-        right: 0;
+        right: -0.5px;
         min-height: 26px;
         display: flex;
         justify-content: space-evenly;
