adjust slider to other max sizes than 100

--- a/src/Components/ColorHint/ColorHint.scss
+++ b/src/Components/ColorHint/ColorHint.scss
@@ -51,6 +51,7 @@
             }
         }
         & > div {
+            border: 1px solid $tertiaryTextColor;
             position: relative;
             height: 65%;
             width: 14px;
