--- a/src/Components/RadialSettings/RadialSettings.scss
+++ b/src/Components/RadialSettings/RadialSettings.scss
@@ -185,6 +185,9 @@
         align-items: center;
         button {
             width: 25%;
+            &:last-child:hover {
+                color: $warningTextColor;
+            }
         }
     }
 }
