--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -7,7 +7,7 @@
     header {
         height: $xlgFont;
         width: 100%;
-        padding: 0 5px 0 0;
+        padding: 0;
         background: $secondaryBackgroundColor;
         font-size: $medFont;
         display: flex;
@@ -24,7 +24,7 @@
             justify-content: center;
             background-color: $secondaryTextColor;
             color: $secondaryBackgroundColor;
-            font-size: $smlFont;
+            font-size: $xsmFont;
             font-weight: bolder;
             text-align: center;
             line-height: $lrgFont;
@@ -48,12 +48,13 @@
             button {
                 position: relative;
                 height: 100%;
-                width: 25px;
+                width: 35px !important;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 background: transparent;
                 border: none;
+                border-left: $tertiaryBorder;
                 color: $primaryTextColor;
                 font-size: $xlgFont;
                 line-height: $xlgFont;
@@ -65,6 +66,7 @@
                     height: 100%;              
                 }
                 &:hover {
+                    background: $secondaryBorderColor;
                     color: $activeButtonTextColor;
                     font-size: $lrgFont;
                 }
